--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for P5pack
 
 {{$NEXT}}
+    - add authority to the version information
 
 0.0.2  2018-04-11T15:40:19+02:00
     - Follow App:Mi6's default Changes format
