Check CI for 0.0.15 release

--- a/Changes
+++ b/Changes
@@ -1,11 +1,19 @@
 Revision history for P5pack
 
 {{$NEXT}}
+    - Made compatible with "use experimental :pack" by activating
+      Buf.unpack upon loading and usurped the pack/unpack spectests
+    - Fix bug in handling of pack 'h' vs 'H': they were reversed
+    - Workaround weird Rakudo bug in unpacking 'h' and 'H'
+    - Add CI button for each OS
+    - Modernized pod
+    - Added sponsor button and link
+    - Update copyright year
 
 0.0.14  2023-08-07T20:50:57+02:00
     - Update test file extension
-    - Added sponsor link
     - Workaround $*KERNEL.bits being wrong on AMD64 (aka M1/M2)
+    - Update copyright year
 
 0.0.13  2021-09-09T13:07:29+02:00
     - Change file extension to .rakumod
